--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "main": "app.svelte",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint src --fix",
+    "format": "./node_modules/.bin/prettier src --write"
   },
   "author": "k-sato",
   "license": "ISC",
   "dependencies": {
     "acorn": "^8.7.0",
     "svelte": "^3.47.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2"
   }
 }
