Remove semi colunm

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,12 @@
       "sourceType": "module"
     },
     "rules": {
-      "prettier/prettier": "error"
+      "prettier/prettier": "error",
+      "semi": ["error", "never", {"beforeStatementContinuationChars": "never"}],
+      "semi-spacing": ["error", {"after": true, "before": false}],
+      "semi-style": ["error", "first"],
+      "no-extra-semi": "error",
+      "no-unexpected-multiline": "error",
+      "no-unreachable": "error",
     }
 }
